--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #f0f0f0;
+    background-color: #F6F9FC;
   }
 
 .btn-stripe { background-color: #635BFF;}
